--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<h1 class="indian-product">
+<h1 class="indian-product-chennai">
   <span *ngFor="let part of titleParts" [ngClass]="part.colorClass">
     {{ part.text }}
   </span>
